--- a/Web/src/main/webapp/Ex13_Form.html
+++ b/Web/src/main/webapp/Ex13_Form.html
@@ -32,7 +32,7 @@
         
        어떤 상황은 배 만 타야되는 경우
        link
-       <a hreft="boardDetail.jsp?no=100">100번</a> 이런건 form 태그 못쓴다.
+       <a href="boardDetail.jsp?no=100">100번</a> 이런건 form 태그 못쓴다.
        http://localhost:8090/Web/Ex13_ok.jsp?userid=hong&userpwd=1004
 
      form 운송수단
