--- a/Web/src/main/webapp/Ex14_Input.html
+++ b/Web/src/main/webapp/Ex14_Input.html
@@ -15,7 +15,7 @@
 					<hr>
 					Text: <input type="text" maxlength="10" value="기본값" size="100px"><br>
 					<hr>
-					readonly (읽기전용 : 서버로 전송 가능)<br>
+					Readonly (읽기전용 : 서버로 전송 가능)<br>
 					Text : <input type="text" name="user" value="hong" readonly>
 					<hr>
 					disabled (비활성화 : 서버로 전송 불가능)<br>
