--- a/WebScript/src/main/webapp/Ex07_Interval.html
+++ b/WebScript/src/main/webapp/Ex07_Interval.html
@@ -39,6 +39,6 @@ setInterval(call(),1000);
 </head>
 <body>
 	<p id="time"></p>
-	<button onclick="">stop time</button>
+	<button onclick="myTimerStop()">stop time</button>
 </body>
 </html>
