--- a/WebScript/src/main/webapp/Ex11_Event.html
+++ b/WebScript/src/main/webapp/Ex11_Event.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
         /*
         https://www.w3schools.com/tags/ref_eventattributes.asp
+        
             Event	Description
             onchange	An HTML element has been changed
             onclick	The user clicks an HTML element
@@ -23,36 +24,37 @@
             >> onload 사건 발생 >> 함수실행 >> 함수가 호출되었을때 모든 요소는 DOM 객체로 존재하는 것을 보장
       
         */
-       function bodyLoad(){
-            console.log("loading....");
-            //함수에서는 body 안에 있는 모든 요소를 가지고 놀 수 있다.
-            const data = document.myform.money.value;
-            console.log(isNaN(data)); //false 숫자
-       }
-
-       function focusFunc(){ //포커스가 들어오면
-            document.getElementById("myinput").style.background="gold"; //동적 스타일 적용
-       }
-       function blurFunc(){  // 포커스가 떠나면
-            document.getElementById("myinput").style.background="white"; //동적 스타일 적용
-       }
-       function selectTag(){
-            const value = document.myform.sel.value;
-            alert(value);
-       }
-       // POINT
-       // 1. this (요소자신)
-       function changeColor(obj){
-            console.log(obj)  //요소자신
-            obj.style.backgroundColor="gold";
-       }
-       function changeColor2(obj){
-            console.log(obj)
-            obj.style.backgroundColor="white";
-       }
-
-
-    </script>
+   	function bodyLoad(){
+		console.log("loading ...");
+		//함수에서는 body 안에 있는 모든 요소를 가지고 놀 수 있다
+		const data = document.myform.money.value;
+		console.log(isNaN(data)); //false 숫자
+	}
+		
+	function focusFunc(){  //포커스가 들어오면
+		document.getElementById("myinput").style.background="gold"; //동적 스타일 적용
+	}	
+	function blurFunc(){  //포커스가 떠나면
+		document.getElementById("myinput").style.background="white"; //동적 스타일 적용
+	}	
+	
+	function selectTag(){
+		const value = document.myform.sel.value;
+		alert(value);
+	}
+	//POINT
+	//1. this (요소자신)
+	
+	function changeColor(obj){
+		console.log(obj) //요소자신
+		obj.style.backgroundColor="gold";
+	}
+	
+	function changeColor2(obj){
+		console.log(obj)
+		obj.style.backgroundColor="white";
+	}
+	</script>
 </head>
 
     <body onload="bodyLoad()">
