--- a/WebScript/src/main/webapp/Ex21_DOM_Quiz.html
+++ b/WebScript/src/main/webapp/Ex21_DOM_Quiz.html
@@ -21,7 +21,7 @@
 				eletable.setAttribute("id", "Tab"); //<table id="tab"></table>
 				
 				//for   tr   for  td 형태로 ....
-				
+				// th 빼고 만들어보자
 				//tr 만들고 .... tr 에 td append .....  최종 tr  table 에 append 
 				for(let i = 0 ; i < intRow ; i++){
 					let elerow = document.createElement("tr");
